--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,9 +56,10 @@
         android:text="@string/buttonAdd_value"
         android:onClick="add"/>
 
-    <TextView
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonAdd"
-        android:id="@+id/display" />
+        />
 </RelativeLayout>
