--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/input_username"
-        android:id="@android:id/list"/>
+        android:longClickable="true"
+        android:id="@+id/listProfils"/>
 
 </RelativeLayout>
