--- a/app/src/main/res/drawable/background_menu.xml
+++ b/app/src/main/res/drawable/background_menu.xml
@@ -4,8 +4,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/Explosions">
+        android:orientation="vertical">
     </RelativeLayout>
 
 </selector>
