--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,69 +2,106 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:gravity="center"
+    android:weightSum="1"
+    android:background="@drawable/rainbow">
 
-
-        <TextView
-            android:text="Music :"
-            android:textSize="30sp"
-            android:layout_width="wrap_content"
-            android:layout_height="57dp"
-            android:layout_gravity="center"
-            android:id="@+id/music" />
-
-        <SeekBar
-            android:layout_width="173dp"
-            android:layout_height="57dp"
-            android:layout_marginBottom="80dp"
-            android:layout_gravity="center"
-            android:id="@+id/musicBar" />
-
-        <TextView
-            android:text="Sound Effects :"
-            android:textSize="30sp"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_height="57dp"
-            android:id="@+id/sound" />
-
-        <SeekBar
-            android:layout_width="173dp"
-            android:layout_height="57dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="80dp"
-            android:id="@+id/soundBar"/>
-
-    <!--<CheckBox
-        android:text="Animation"
-        android:textSize="30sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:id="@+id/animationCheck"
-        android:layout_weight="0.14" />-->
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
-
-        <CheckBox
-            android:textSize="30sp"
-            android:layout_width="62dp"
-            android:layout_height="50dp"
-            android:button="@null"
-            android:id="@+id/animationCheck" />
+        android:layout_height="0dp"
+        android:layout_weight=".20"
+        android:gravity="center">
 
         <TextView
-            android:text="Animation"
+            android:text="@string/music"
             android:textSize="30sp"
             android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp"
-            android:layout_height="57dp"
-            android:id="@+id/animation" />
+            android:layout_height="wrap_content"
+            android:id="@+id/music" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".20"
+        android:gravity="center">
+
+        <SeekBar
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/musicBar" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".20"
+        android:gravity="center">
+
+        <TextView
+            android:text="@string/sound"
+            android:textSize="30sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sound" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".20"
+        android:gravity="center">
+
+        <SeekBar
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/soundBar"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight=".20"
+        android:layout_gravity="center">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".30"
+            android:gravity="center">
+
+            <CheckBox
+                android:textSize="30sp"
+                android:layout_width="62dp"
+                android:layout_height="50dp"
+                android:button="@null"
+                android:background="@drawable/checkbox"
+                android:id="@+id/animationCheck" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".90"
+            android:gravity="center">
+
+            <TextView
+                android:text="@string/animation"
+                android:textSize="30sp"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginStart="50dp"
+                android:layout_height="57dp"
+                android:id="@+id/animation" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
