--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/background1"
     tools:context="fr.univ.orleans.android.seabattle.views.MainActivity">
 
     <LinearLayout
@@ -62,11 +63,19 @@
                 android:onClick="add"/>
         </LinearLayout>
 
-        <ListView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:longClickable="true"
-            android:id="@+id/listProfils"/>
+            android:gravity="center">
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:longClickable="true"
+                android:id="@+id/listProfils"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
